--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                         <span class="lang-fr" style="display:none">Education</span>
                       
                       </h3>
-                      <span class="lang-en">
+                      <span>
                         <p>
                           Master in Data Science & Analytics (2024–2026)<br>
                           Bachelor's in Economics Analysis & Management (2021–2024)<br>
@@ -365,7 +365,7 @@
         <a>Power BI</a>
       </div>
       <div class="btns">
-        <a href="projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
+        <a href="portofolio/projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
       </div>
     </div>
 
@@ -379,7 +379,7 @@
         <a href="#">DAX</a>
       </div>
       <div class="btns">
-        <a href="projects/dashboard_fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
+        <a href="portofolio/projects/dashboard_fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
       </div>
     </div>
 
@@ -465,6 +465,6 @@
   </div>
 </footer>
 
-     <script src="main.js"></script>
+     <script src="portofolio/main.js"></script>
 </body>
 </html>
