--- a/index.html
+++ b/index.html
@@ -36,10 +36,6 @@
                       <span class="lang-fr" style="display:none">Projets</span>
                     </a>
                 </li>
-                <li>
-                    <i class="fa-solid fa-code"></i>
-                    <a href="#services">services</a>
-                </li>
                 <button id="lang-toggle" class="lang-btn">
                   <span class="lang-text">EN</span>
                 </button>
@@ -96,9 +92,12 @@
               
               </a>
 
-              <button class="btn-home2">
-                <i class="fa-solid fa-download"></i> Télécharger CV
-              </button>
+              <a href="assets/cv/cv.pdf" target="_blank" class="btn-home2">
+                <i class="fa-solid fa-arrow-right"></i>
+                <span class="lang-en">Download CV</span>
+                <span class="lang-fr" style="display:none">Télécharger le CV</span>
+              </a>
+
             </div>
 
             <div class="hhr">
@@ -120,7 +119,7 @@
             </div>
 
             <div class="social-links">
-              <a href="#" class="social-link"><i class="fa-brands fa-github"></i></a>
+              <a href="https://github.com/Kimiecozy" class="social-link"><i class="fa-brands fa-github"></i></a>
               <a href="https://www.linkedin.com/in/kim-ngan-thai/" class="social-link"><i class="fa-brands fa-linkedin"></i></a>
               <a href="https://wa.me/330624979502" class="social-link"><i class="fa-brands fa-whatsapp"></i></a>
             </div>
@@ -324,7 +323,7 @@
 
 
 
-     <section class="project" id="project">
+      <section class="project" id="project">
         <p>PROJECTS</p>
         <h1>Featured Work</h1>
         <hr>
@@ -334,118 +333,57 @@
         </div>
         <div class="projects-container">
 
-    <div class="project-card">
-      <img src="portofolio/images/finteker.png" alt="E-Commerce Website">
-      <h3>Finteker.fr</h3>
-      <p>
-        Finance website.
-        <span class="lang-en">Languages</span>
-        <span class="lang-fr" style="display:none">Langues</span>
-      </p>
-      <div class="skills">
-        <a>Finance</a>
-        <a>Intelligence Artificielle</a>
-        <a>HTML</a>
-        <a>CSS</a>
-        <a>JavaScript</a>
-      </div>
-      <div class="btns">
-        <a href="https://github.com/Kimiecozy/finteker.fr" class="btn"><i class="fab fa-github"></i> GitHub</a>
-        <a href="https://www.finteker.fr/" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-      </div>
-    </div>
+          <div class="project-card">
+            <img src="portofolio/images/finteker.png" alt="E-Commerce Website">
+            <h3>Finteker.fr</h3>
+            <p>
+              Finance website.
+              <span class="lang-en">Languages</span>
+              <span class="lang-fr" style="display:none">Langues</span>
+            </p>
+            <div class="skills">
+              <a>Finance</a>
+              <a>Intelligence Artificielle</a>
+              <a>HTML</a>
+              <a>CSS</a>
+              <a>JavaScript</a>
+            </div>
+            <div class="btns">
+              <a href="https://github.com/Kimiecozy/finteker.fr" class="btn"><i class="fab fa-github"></i> GitHub</a>
+              <a href="https://www.finteker.fr/" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+            </div>
+          </div>
 
-    <div class="project-card">
-      <img src="portofolio/images/Weather Forecast Dashboard.jpg" alt="France Property Insights">
-      <h3>France Property Insights</h3>
-      <p>Analysis and prediction app for Île-de-France properties</p>
-      <div class="skills">
-        <a>Python</a>
-        <a>Gradio</a>
-        <a>Power BI</a>
-      </div>
-      <div class="btns">
-        <a href="portofolio/projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
-      </div>
-    </div>
+          <div class="project-card">
+            <img src="portofolio/images/fpi-1.png" alt="France Property Insights">
+            <h3>France Property Insights</h3>
+            <p>Analysis and prediction app for Île-de-France properties</p>
+            <div class="skills">
+              <a>Python</a>
+              <a>Gradio</a>
+              <a>Power BI</a>
+            </div>
+            <div class="btns">
+              <a href="portofolio/projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
+            </div>
+          </div>
 
-    <div class="project-card">
-      <img src="portofolio/images/WordPress dashboard design concept.jpg" alt="Blog Website">
-      <h3>FPI Dashboard</h3>
-      <p>A dashboard of real estate trend</p>
-      <div class="skills">
-        <a href="#">Power BI</a>
-        <a href="#">Power Query</a>
-        <a href="#">DAX</a>
-      </div>
-      <div class="btns">
-        <a href="portofolio/projects/dashboard_fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <img src="portofolio/images/Game Dashboard Design.jpg" alt="Game Landing Page">
-      <h3>Game Landing Page</h3>
-      <p>Landing page for a game with animations and parallax effects.</p>
-      <div class="skills">
-        <a href="#">HTML</a>
-        <a href="#">CSS</a>
-        <a href="#">GSAP</a>
-      </div>
-      <div class="btns">
-        <a href="#" class="btn"><i class="fab fa-github"></i> GitHub</a>
-        <a href="#" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-      </div>
-    </div>
-
-    <div class="project-card">
-      <img src="portofolio/images/Task manager app.jpg" alt="Task Manager">
-      <h3>Task Manager</h3>
-      <p>Task tracking web app with CRUD features and clean UI.</p>
-      <div class="skills">
-        <a href="#">HTML</a>
-        <a href="#">CSS</a>
-        <a href="#">JS</a>
-      </div>
-      <div class="btns">
-        <a href="#" class="btn"><i class="fab fa-github"></i> GitHub</a>
-        <a href="#" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
-      </div>
-    </div>
-  </div>
+          <div class="project-card">
+            <img src="portofolio/images/dashboard_fpi.png" alt="FPI DASHBOARD">
+            <h3>FPI Dashboard</h3>
+            <p>A dashboard of real estate trend</p>
+            <div class="skills">
+              <a href="#">Power BI</a>
+              <a href="#">Power Query</a>
+              <a href="#">DAX</a>
+            </div>
+            <div class="btns">
+              <a href="portofolio/projects/dashboard_fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
+            </div>
+          </div>
+        </div>
      </section>
-     <section class="services" id="services">
-        <p>SERVICES</p>
-        <h1>Our Features & Services</h1>
-        <hr>
-        <div class="services-container">
-
-    <div class="service-card">
-      <img src="portofolio/images/web.svg" alt="Web Development">
-      <h3>Web Development</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi nemo.</p>
-    </div>
-
-    <div class="service-card">
-      <img src="portofolio/images/app.svg" alt="App Development">
-      <h3>App Development</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi nemo.</p>
-    </div>
-
-    <div class="service-card">
-      <img src="portofolio/images/dm.svg" alt="Digital Marketing">
-      <h3>Digital Marketing</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi nemo.</p>
-    </div>
-
-    <div class="service-card">
-      <img src="portofolio/images/seo.svg" alt="Email Marketing">
-      <h3>Email Marketing</h3>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ut eligendi soluta est veniam sequi nemo.</p>
-    </div>
-
-  </div>
-     </section>
+     
      <footer class="footer">
   <div class="footer-container">
     <h2 class="footer-logo">Kim Ngan THAI</h2>
@@ -453,11 +391,10 @@
       <li><a href="#home">Home</a></li>
       <li><a href="#about">About</a></li>
       <li><a href="#project">Projects</a></li>
-      <li><a href="#services">Services</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
     <div class="footer-social">
-      <a href="https://github.com/Saboo24" target="_blank" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
+      <a href="https://github.com/Kimiecozy" target="_blank" aria-label="GitHub"><i class="fa-brands fa-github"></i></a>
       <a href="https://www.linkedin.com/in/kim-ngan-thai/w" target="_blank" aria-label="LinkedIn"><i class="fa-brands fa-linkedin"></i></a>
       <a href="https://wa.me/330624979502" target="_blank" aria-label="WhatsApp"><i class="fa-brands fa-whatsapp"></i></a>
     </div>
