--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
                       
                       </h3>
                       <p>
-                        +2 business products : Finteker.fr, France Property Insights, SoLIA
+                        +2 business products : Finteker.fr, France Property Insights
                         +3 projects : predictive modeling, dashboards BI</p>
                   </div>
               </div>
