Update project description for Finteker website

--- a/index.html
+++ b/index.html
@@ -334,12 +334,10 @@
         <div class="projects-container">
 
           <div class="project-card">
-            <img src="portofolio/images/finteker.png" alt="E-Commerce Website">
+            <img src="portofolio/images/finteker.png" alt="Finance Website">
             <h3>Finteker.fr</h3>
             <p>
-              Finance website.
-              <span class="lang-en">Languages</span>
-              <span class="lang-fr" style="display:none">Langues</span>
+              Finance website
             </p>
             <div class="skills">
               <a>Finance</a>
