Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
               
               </a>
 
-              <a href="assets/cv/cv.pdf" target="_blank" class="btn-home2">
+              <a href="portofolio/docs/cv_fr.pdf" target="_blank" class="btn-home2">
                 <i class="fa-solid fa-arrow-right"></i>
                 <span class="lang-en">Download CV</span>
                 <span class="lang-fr" style="display:none">Télécharger le CV</span>
