Fix header links to use relative paths for consistency

--- a/projects/dashboard_fpi.html
+++ b/projects/dashboard_fpi.html
@@ -261,10 +261,10 @@
 
 <header>
   <div class="header-content">
-    <a href="/index.html">Kim Ngan THAI</a>
+    <a href="../index.html">Kim Ngan THAI</a>
 
     <div class="header-right">
-      <a href="/#projects">&larr;
+      <a href="../index.html#projects">&larr;
         <span class="lang-en">Back to portfolio</span>
         <span class="lang-fr" style="display:none">Retour au portfolio</span>
       </a>
