--- a/projects/fpi.html
+++ b/projects/fpi.html
@@ -287,10 +287,10 @@
 
 <header>
   <div class="header-content">
-    <a href="/index.html">Kim Ngan THAI</a>
+    <a href="../index.html">Kim Ngan THAI</a>
 
     <div class="header-right">
-      <a href="/#projects">&larr; 
+      <a href="../index.html#projects">&larr; 
         <span class="lang-en">Back to portfolio</span>
         <span class="lang-fr" style="display:none">Retourner au portofolio</span>
       </a>
