--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               
               </a>
 
-              <a href="docs/cv_fr.pdf" target="_blank" class="btn-home2">
+              <a href="docs/cv-data-analyst.pdf" target="_blank" class="btn-home2">
                 <i class="fa-solid fa-arrow-right"></i>
                 <span class="lang-en">Download CV</span>
                 <span class="lang-fr" style="display:none">Télécharger le CV</span>
@@ -358,6 +358,7 @@
             <div class="btns">
               <a href="https://github.com/Kimiecozy/finteker.fr" class="btn"><i class="fab fa-github"></i> GitHub</a>
               <a href="https://www.finteker.fr/" class="btn"><i class="fas fa-external-link-alt"></i> Live Demo</a>
+              <a href="docs/rapport_finteker.pdf" class="btn"><i class="fas fa-external-link-alt"></i> Report</a>
             </div>
           </div>
 
