--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               
               </a>
 
-              <a href="docs/cv-data-analyst.pdf" target="_blank" class="btn-home2">
+              <a href="docs/cv-kim-ngan-thai-data.pdf" target="_blank" class="btn-home2">
                 <i class="fa-solid fa-arrow-right"></i>
                 <span class="lang-en">Download CV</span>
                 <span class="lang-fr" style="display:none">Télécharger le CV</span>
