--- a/index.html
+++ b/index.html
@@ -354,6 +354,9 @@
               <a>HTML</a>
               <a>CSS</a>
               <a>JavaScript</a>
+              <a>API</a>
+              <a>Cybersecurity/RGPD</a>
+              <a>Hébergement</a>
             </div>
             <div class="btns">
               <a href="https://github.com/Kimiecozy/finteker.fr" class="btn"><i class="fab fa-github"></i> GitHub</a>
@@ -368,8 +371,10 @@
             <p>Analysis and prediction app for Île-de-France properties</p>
             <div class="skills">
               <a>Python</a>
+              <a>SQL</a>
               <a>Gradio</a>
-              <a>Power BI</a>
+              <a>CSS</a>
+              <a>UI/UX</a>
             </div>
             <div class="btns">
               <a href="projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
@@ -381,9 +386,9 @@
             <h3>FPI Dashboard</h3>
             <p>A dashboard of real estate trend</p>
             <div class="skills">
-              <a href="#">Power BI</a>
-              <a href="#">Power Query</a>
-              <a href="#">DAX</a>
+              <a>Power BI</a>
+              <a>Power Query</a>
+              <a>DAX</a>
             </div>
             <div class="btns">
               <a href="projects/dashboard_fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
