--- a/index.html
+++ b/index.html
@@ -375,6 +375,8 @@
               <a>Gradio</a>
               <a>CSS</a>
               <a>UI/UX</a>
+              <a>Data pipeline</a>
+              <a>Git</a>
             </div>
             <div class="btns">
               <a href="projects/fpi.html" class="btn"><i class="fas fa-external-link-alt"></i> Lire étude</a>
