ajout web scraping

--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
                     <img src="images/ibm.jpg">
                     <img src="images/excel_vba.jpg">
                 </div>
-                <p>Power BI · DAX · Power Query · IBM SPSS · Advanced Excel · VBA</p>
+                <p>Power BI · DAX · Power Query · IBM SPSS · Advanced Excel · VBA </p>
             </div>
 
             <div class="skill-box">
@@ -274,7 +274,7 @@
                     <img src="images/googlecloudstorage.svg">
                     <img src="images/googlebigquery.svg">
                 </div>
-                <p>Git / CI · Google Cloud · BigQuery</p>
+                <p>Git / CI · Google Cloud · BigQuery · Web Scraping</p>
             </div>
 
             <div class="skill-box">
